Add custom fields mechanism to mapping template processor #5